# snake_game

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: game_manager.cpp  game_manager.h  game_state.h  state_interface.h  state_menu.cpp  state_menu.h
src/assets/assets_managers/: assets_manager.cpp  assets_manager.h  fonts_manager.cpp  fonts_manager.h  sounds_manager.cpp  sounds_manager.h  sprites_manager.cpp  sprites_manager.h  textures_manager.cpp  textures_manager.h
src/game_logic/board/: board.cpp  board.h  food.h  obstacles.h
src/game_logic/snake/: snake.cpp  snake.h
src/states/: state_interface.h  state_menu.cpp  state_menu.h  state_play.cpp  state_play.h
src/states/input/: state_play_input_handling.cpp  state_play_input_handling.h
src/states/state_interface/: state_interface.h
src/states/state_interface/input/: input_handling_interface.cpp  input_handling_interface.h
src/states/state_interface/views/: state_view_interface.h
src/states/state_interface/views/tiles/: tile.cpp
src/states/state_menu/: state_menu.cpp  state_menu.h
src/states/state_play/: state_play.cpp  state_play.h  state_play_input_handling.h  state_play_view.cpp  state_play_view.h
src/states/state_play/game_logic/board/: board.h  food.cpp  obstacles.cpp
src/states/state_play/game_logic/snake/: snake.h
src/states/views/: state_play_view.cpp  state_play_view.h  state_view_interface.h
src/states/views/tiles/: tile.cpp  tile.h
